# OOP-lab-1

./: CMakeLists.txt  IStrategy.cpp  IUniformStrategy.cpp  RandomGenerator.cpp  main.cpp
Algorithms/: AhrensGammaMethod.cpp  CorrelationMethod.cpp  FibonacciMethod.cpp  InverseCongruentialMethod.cpp  LinealCongruentialMethod.cpp  LinialCongruentMethod.cpp  LinialCongruentialMethod.cpp  LogarithmExponentialMethod.cpp  PolarCoordintesMethod.cpp  QuadraticCongruentialMethod.cpp  ThreeSigmaMethod.cpp  UnityMethod.cpp  Utils.cpp
Google_tests/: CMakeLists.txt  RandomGenerator_test.cpp
Headers/: IStrategy.h  RandomGenerator.h
Headers/Algorithms/: LinialCongruentMethod.h
include/: IStrategy.h  IUniformStrategy.h  RandomGenerator.h
include/Algorithms/: AhrensGammaMethod.h  CorrelationMethod.h  FibonacciMethod.h  InverseCongruentialMethod.h  LinealCongruentialMethod.h  LinialCongruentialMethod.h  LogarithmExponentialMethod.h  PolarCoordintesMethod.h  QuadraticCongruentialMethod.h  ThreeSigmaMethod.h  UnityMethod.h  Utils.h  algorithms.h
